@@ -251,7 +251,6 @@ public class ParserTest extends JAMWikiUnitTest {
 		failures.add("Heading5");
 		failures.add("HtmlCommentTest2");
 		failures.add("HtmlMismatchTest3");
-		failures.add("HtmlXSS1");
 		failures.add("ImageLink2"); // bad paragraph parsing - no <p> around <div> tags
 		failures.add("Inclusion~test"); // template params not parsed in parser functions
 		failures.add("NestedTable1"); // paragraphs in <td> tags
