@@ -1,3 +1,5 @@
 <p><u class="x">text</u></p>
 <div>x</div>
-<div>&lt;SCRIPT&gt;alert("XSS")&lt;/SCRIPT&gt;"&gt;test</div>
+
+&lt;DIV &quot;&quot;&quot;&gt;&lt;SCRIPT&gt;alert(&quot;XSS&quot;)&lt;/SCRIPT&gt;&quot;&gt;test&lt;/div&gt;
+<p><span style="">&lt;script&gt;alert(&quot;XSS&quot;)&lt;/script&gt;">d</span></p>
